sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:11: error: not found: value comtpeur
  for ( k <- 0 to (n-1-comtpeur)){
                       ^